--- a/myblog/static/css/index.css
+++ b/myblog/static/css/index.css
@@ -44,7 +44,12 @@ body {
   padding: 20px;
   margin-top: 20px;
 }
-
+.post {
+  padding: 20px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+}
 .row:after {
   content: "";
   display: table;
