--- a/myblog/templates/about.html
+++ b/myblog/templates/about.html
@@ -11,18 +11,24 @@
                     <li>Почта: <a href="mailto:chertaas@yandex.ru">chertaas@yandex.ru</a></li>
                 </ul>
             </td>
-            <td rowspan="3">
-                <h2>О себе</h2>
+            <td class="color4" rowspan="3">
+                <h2>О блоге</h2>
+                <h4> Digital-дизайн во всех его проявлениях </h4>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla incidunt asperiores vitae, quidem quia, accusantium mollitia quae quisquam necessitatibus quod quibusdam corrupti. Accusamus facilis repudiandae nobis harum numquam voluptates atque!
-                    Quo repudiandae quis magnam ducimus dolore, consequatur corrupti temporibus rerum nobis id nemo accusantium iste enim rem dolorum blanditiis obcaecati veniam! Hic natus non nobis molestias voluptate dolore culpa velit!
-                    Magni officia provident expedita nesciunt autem commodi. Odio nobis voluptatum nulla beatae magnam ducimus delectus itaque dolorum! Nemo voluptas eveniet sequi. Cumque porro libero tempora eaque officiis nostrum labore alias?
-                    Nemo impedit, sunt laborum eius mollitia cum pariatur rem numquam itaque aperiam esse alias molestiae maxime porro necessitatibus, ut corporis ipsa sequi voluptate veniam, recusandae repellendus ratione assumenda! Iusto, cum?
-                    </p>
+                   Digital переводится как «цифровой». Значит, digital-дизайн — это работа над оформлением цифрового пространства: создание таких изображений и графических элементов,
+                   которые существуют только в цифровом виде. </p>
+
+                <p> <h4>Тренды и новинки</h4>Т Она будет делиться своими знаниями и опытом в сфере веб-дизайна, графического дизайна, анимации, а также о применении искусственного интеллекта в творческих проектах.
+                </p>
+                <p>Обучение и вдохновение: Как преподаватель, она будет делиться своими знаниями, опытом и методиками, помогая другим развиваться в цифровом дизайне.
+                </p>
+                <p>Практические советы и кейсы: Как фрилансер, она будет делиться практическими советами, собственными кейсами и наработками, раскрывая процесс создания цифровых продуктов.
+                </p>
+                <p>Обучение и вдохновение: Как преподаватель, она будет делиться своими знаниями, опытом и методиками, помогая другим развиваться в цифровом дизайне.
+                </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto maxime, laudantium, odio qui sint adipisci repudiandae vitae eum quos dolore nesciunt nulla voluptatum ab commodi delectus optio eveniet, sed illo?
-                    Saepe sed nostrum veritatis, placeat, suscipit dolores eos dolorum doloremque consectetur numquam delectus minima quo, aut ullam aliquam hic. Culpa qui sapiente tempora voluptatem eaque doloribus, iste earum perferendis minima.
-                    </p>
+                В целом, это будет блог для тех, кто интересуется цифровым дизайном, кто хочет развиваться в этой области и кто ищет вдохновение для своих творческих проектов. Блог будет полезен как начинающим дизайнерам, так и профессионалам, стремящимся идти в ногу со временем.
+                </p>
                 </td>
         </tr>
         <tr>
