--- a/myblog/templates/index.html
+++ b/myblog/templates/index.html
@@ -5,23 +5,19 @@
 
 <div class="row">
   <div class="leftcolumn">
-    <div class="card color4">
+    <div class="card post color4">
+      <div class="decrip">
       <h2>TITLE HEADING</h2>
       <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
       <p>Some text..</p>
-    </div>
-    <div class="card color4">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
+      </div>
       <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
     </div>
   </div>
   <div class="rightcolumn">
     <div class="card color3">
       <h2>Обо мне</h2>
-      <div class="fakeimg" style="height:100px;"></div>
+
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
     </div>
     <div class="card color1">
