--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -17,14 +17,7 @@
      <div class="wrapper1">
           <div class="logo">
             <img src="{%static 'logo.jpg'%}" id="logo">
-            </div>
-        <div class="name">
-
-            <h1>Тася Черезова</h1>
-            <h3>Группа: 1-МГЗ-2</h3>
-        </div>
-
-    </div>
+          </div></div>
         <nav>
             {% for key, value in menu.items %}
             <button onclick="document.location='{{value}}'">{{key}}</button>
