--- a/myblog/templates/index.html
+++ b/myblog/templates/index.html
@@ -2,23 +2,53 @@
 {% load static %}
 {% block  content %}
 
+<div class="title">
+  <h2>DIGITAL-ДИЗАЙН </h2>
+  <img src="{%static 'arr.png'%}" id="arr">
+</div>
 
 <div class="row">
   <div class="leftcolumn">
-    <div class="card post color4">
-      <div class="decrip">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <p>Some text..</p>
-      </div>
-      <div class="fakeimg" style="height:200px;">Image</div>
-    </div>
+    <button class="post" onclick="">
+        <div class="card">
+          <h2>МИНИМАЛИЗМ</h2>
+          <h4>Как чистый дизайн улучшает пользовательский опыт / 15 декабря 2024 </h4>
+          <p class="cardtext">Это не значит, что дизайн должен быть скучным.Хорошо продуманный минимализм
+            может быть элегантным и запоминающимся.Он позволяет выделить ключевые элементы
+            и сделать интерфейс интуитивно понятным.</p>
+        </div>
+      </button>
+    <button class="post" onclick="">
+        <div class="card">
+          <h2>ТИПОГРАФИКА</h2>
+          <h4>Как правильно использовать шрифты в цифровом дизайне / 15 декабря 2024 </h4>
+          <p class="cardtext">Существует множество разных шрифтов, но не все они подходят для цифрового дизайна.
+            Важно учитывать такие параметры, как удобочитаемость, контрастность, высота строчных знаков и интервалы между буквами. </p>
+        </div>
+      </button>
+    <button class="post" onclick="">
+        <div class="card">
+          <h2> ИИ В ДИЗАЙНЕ</h2>
+          <h4>Бу! Испугался? Не бойся, я друг / 15 декабря 2024 </h4>
+          <p class="cardtext">Искусственный интеллект является инструментом, повышающим эффективность, креативность и работы дизайнеров.
+            Освоение ИИ предоставляет конкурентное преимущество. Будущее дизайна предполагает интеграцию человеческого творчества и возможностей ИИ.</p>
+        </div>
+      </button>
+    <button class="post" onclick="">
+        <div class="card">
+            <h2>ТРЕНДЫ В ВЕБ-ДИЗАЙНЕ</h2>
+          <h4>Обзор ключевых тенденций в веб-дизайне на 2024 год / 15 декабря 2024 </h4>
+          <p class="cardtext">Пора заглянуть в будущее и узнать, какие тенденции будут формировать облик веб-сайтов в ближайшие месяцы.
+            В этом посте мы рассмотрим ключевые тренды, которые будут влиять на пользовательский опыт, эстетику и функциональность веб-дизайна.</p>
+        </div>
+      </button>
+
   </div>
   <div class="rightcolumn">
-    <div class="card color3">
-      <h2>Обо мне</h2>
-
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    <div class="card color2">
+      <h2>Тася Черезова</h2>
+      <h4>Группа: 1-МГЗ-2</h4>
+      <p>Сделанный на скорую руку, блог про цифровые технологии в дизайне. Немного странный. Отнеситесь с пониманием)</p>
     </div>
     <div class="card color1">
       <h2>Подписывайся</h2>
@@ -40,7 +70,7 @@
 </div>
 
 <div class="footer">
-  <h2>Footer</h2>
+  <h2>to be continued...</h2>
 </div>
 
 {% endblock %}
