--- a/myblog/templates/about.html
+++ b/myblog/templates/about.html
@@ -18,27 +18,21 @@
                    Digital переводится как «цифровой». Значит, digital-дизайн — это работа над оформлением цифрового пространства: создание таких изображений и графических элементов,
                    которые существуют только в цифровом виде. </p>
 
-                <p> <h4>Тренды и новинки</h4>Т Она будет делиться своими знаниями и опытом в сфере веб-дизайна, графического дизайна, анимации, а также о применении искусственного интеллекта в творческих проектах.
-                </p>
-                <p>Обучение и вдохновение: Как преподаватель, она будет делиться своими знаниями, опытом и методиками, помогая другим развиваться в цифровом дизайне.
-                </p>
-                <p>Практические советы и кейсы: Как фрилансер, она будет делиться практическими советами, собственными кейсами и наработками, раскрывая процесс создания цифровых продуктов.
-                </p>
-                <p>Обучение и вдохновение: Как преподаватель, она будет делиться своими знаниями, опытом и методиками, помогая другим развиваться в цифровом дизайне.
-                </p>
-                <p>
-                В целом, это будет блог для тех, кто интересуется цифровым дизайном, кто хочет развиваться в этой области и кто ищет вдохновение для своих творческих проектов. Блог будет полезен как начинающим дизайнерам, так и профессионалам, стремящимся идти в ногу со временем.
-                </p>
+                <p> <h4>Практические советы</h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut arcu ligula. Proin at odio neque. Aenean consequat porta dapibus. Cras porttitor elementum odio sed suscipit. Aenean eget posuere purus. Maecenas felis ipsum, fringilla vitae consequat sit amet, dapibus sed neque. Quisque eget mollis urna. Suspendisse justo nisl, malesuada ac sem in, tempus rutrum tortor. Proin lectus orci, varius eget porta ut, cursus et ipsum. Sed bibendum lacus at dui venenatis, et auctor tellus feugiat. Vestibulum massa elit, tempus at velit vel, pretium fringilla ligula.</p>
+                <p> <h4>Разбер кейсов</h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut arcu ligula. Proin at odio neque. Aenean consequat porta dapibus. Cras porttitor elementum odio sed suscipit. Aenean eget posuere purus. Maecenas felis ipsum, fringilla vitae consequat sit amet, dapibus sed neque. Quisque eget mollis urna. Suspendisse justo nisl, malesuada ac sem in, tempus rutrum tortor. Proin lectus orci, varius eget porta ut, cursus et ipsum. Sed bibendum lacus at dui venenatis, et auctor tellus feugiat. Vestibulum massa elit, tempus at velit vel, pretium fringilla ligula.</p>
+                <p> <h4>Вдохновение и мотивация</h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut arcu ligula. Proin at odio neque. Aenean consequat porta dapibus. Cras porttitor elementum odio sed suscipit. Aenean eget posuere purus. Maecenas felis ipsum, fringilla vitae consequat sit amet, dapibus sed neque. Quisque eget mollis urna. Suspendisse justo nisl, malesuada ac sem in, tempus rutrum tortor. Proin lectus orci, varius eget porta ut, cursus et ipsum. Sed bibendum lacus at dui venenatis, et auctor tellus feugiat. Vestibulum massa elit, tempus at velit vel, pretium fringilla ligula.</p>
+
                 </td>
         </tr>
         <tr>
             <td class="first color2">
-                <h2>Навыки</h2>
+                <h2>Темы</h2>
                 <ul>
-                    <li>Иллюстрация</li>
+                    <li>2D-графика</li>
                     <li>Анимация</li>
                     <li>Веб-дизайн</li>
                     <li>3D-графика</li>
+                    <li>Нейросети</li>
                 </ul>
             </td>
         </tr>
@@ -50,7 +44,6 @@
                     <li>Illustrator</li>
                     <li>After Effects</li>
                     <li>InDesign</li>
-                    <li>Animate</li>
                     <li>Premiere Pro</li>
                     <li>Blender</li>
                 </ol>
