--- a/myblog/templates/index.html
+++ b/myblog/templates/index.html
@@ -9,7 +9,7 @@
 
 <div class="row">
   <div class="leftcolumn">
-    <button class="post" onclick="">
+    <button class="post" onclick="document.location='/post'">
         <div class="card">
           <h2>МИНИМАЛИЗМ</h2>
           <h4>Как чистый дизайн улучшает пользовательский опыт / 15 декабря 2024 </h4>
@@ -18,7 +18,7 @@
             и сделать интерфейс интуитивно понятным.</p>
         </div>
       </button>
-    <button class="post" onclick="">
+    <button class="post" onclick="document.location='/post'">
         <div class="card">
           <h2>ТИПОГРАФИКА</h2>
           <h4>Как правильно использовать шрифты в цифровом дизайне / 15 декабря 2024 </h4>
@@ -26,15 +26,15 @@
             Важно учитывать такие параметры, как удобочитаемость, контрастность, высота строчных знаков и интервалы между буквами. </p>
         </div>
       </button>
-    <button class="post" onclick="">
+    <button class="post" onclick="document.location='/post'">
         <div class="card">
           <h2> ИИ В ДИЗАЙНЕ</h2>
-          <h4>Бу! Испугался? Не бойся, я друг / 15 декабря 2024 </h4>
+          <h4>Бу! Испугался? Не бойся, пока не работает / 15 декабря 2024 </h4>
           <p class="cardtext">Искусственный интеллект является инструментом, повышающим эффективность, креативность и работы дизайнеров.
             Освоение ИИ предоставляет конкурентное преимущество. Будущее дизайна предполагает интеграцию человеческого творчества и возможностей ИИ.</p>
         </div>
       </button>
-    <button class="post" onclick="">
+    <button class="post" onclick="document.location='/post'">
         <div class="card">
             <h2>ТРЕНДЫ В ВЕБ-ДИЗАЙНЕ</h2>
           <h4>Обзор ключевых тенденций в веб-дизайне на 2024 год / 15 декабря 2024 </h4>
