--- a/myblog/static/css/index.css
+++ b/myblog/static/css/index.css
@@ -9,11 +9,15 @@
 li {
   list-style-type: none ;
   margin-bottom: 10px;
-  margin-left: -40px;
+  margin-left: -20px;
 }
 body {
   font-family: Arial;
   padding: 20px;
+}
+.row{
+width:70%;
+margin:auto;
 }
 
 .leftcolumn {
@@ -61,13 +65,13 @@ body {
 }
 .footer {
   padding: 20px;
-  text-align: left;
+  text-align: center;
   margin-top: 20px;
 }
 .title {
   padding: 20px;
   text-align: center;
-  margin-top: 13%;
+  margin-top: 10%;
   margin-bottom: 5%;
   font-size: 5em;
 }
