--- a/myblog/templates/post.html
+++ b/myblog/templates/post.html
@@ -1,13 +1,40 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block  content %}
-<h1>{{title}}</h1>
-<ul>
-    <li>проект 1</li>
-    <li>проект 2</li>
-    <li>проект 3</li>
-    <li>проект 4</li>
-    <li>проект 5</li>
-</ul>
+<div class="title">
+  <h2>ТИПОГРАФИКА </h2>
+  <img src="{%static 'arr.png'%}" id="arr">
+</div>
+<div class="row">
+  <div class="leftcolumn">
+      <h2>МИНИМАЛИЗМ</h2>
+      <h4>Как чистый дизайн улучшает пользовательский опыт / 15 декабря 2024 </h4>
+      <p class="cardtext">Это не значит, что дизайн должен быть скучным.Хорошо продуманный минимализм
+          может быть элегантным и запоминающимся.Он позволяет выделить ключевые элементы и сделать интерфейс интуитивно понятным.</p>
+  </div>
+  <div class="rightcolumn">
+    <div class="card color2">
+      <h2>Описание</h2>
+      <ul>
+        <li>ВК: <a href="mailto:chertaas@yandex.ru">chertaas@yandex.ru</a></li>
+        <li>Тг-канал: <a href="https://t.me/chrtaa">@chrtaa</a></li>
+        <li>Behance: <a href="mailto:chertaas@yandex.ru">chertaas@yandex.ru</a></li>
+        <li>Artstation: <a href="mailto:chertaas@yandex.ru">chertaas@yandex.ru</a></li>
+      </ul>
+    </div>
+    <div class="card color1">
+      <h2>Теги</h2>
+      <h4>Группа: 1-МГЗ-2</h4>
+      <p>Сделанный на скорую руку, блог про цифровые технологии в дизайне. Немного странный. Отнеситесь с пониманием)</p>
+    </div>
 
+    <div class="card color1">
+      <h2>Термины</h2>
+      <ul>
+        <li>Телеграм: <a href="https://t.me/chrtaa">@chrtaa</a></li>
+        <li>Почта: <a href="mailto:chertaas@yandex.ru">chertaas@yandex.ru</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
 {% endblock %}
