requirements.txt changed

--- a/myblog/templates/index.html
+++ b/myblog/templates/index.html
@@ -6,7 +6,6 @@
   <h2>DIGITAL-ДИЗАЙН </h2>
   <img src="{%static 'arr.png'%}" id="arr">
 </div>
-
 <div class="row">
   <div class="leftcolumn">
     <button class="post" onclick="document.location='/post'">
@@ -70,7 +69,10 @@
 </div>
 
 <div class="footer">
+
   <h2>to be continued...</h2>
+  <br><br>
+  <button onclick="document.location='/posts'">!!! Перейти на блог, который грузит посты из админки !!!</button>
 </div>
 
 {% endblock %}
