--- a/myblog/templates/feedback.html
+++ b/myblog/templates/feedback.html
@@ -1,6 +1,22 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block  content %}
-<h1>{{title}}</h1>
-<p> Lorem </p>
+
+<div class="title">
+  <h2>{{title}}</h2>
+  <img src="{%static 'arr.png'%}" id="arr">
+</div>
+<div class="row">
+{% for el in feed %}
+<div class="card color2">
+        <div class="feed">
+            <h2>{{el.name}}</h2>
+            <h4>{{el.email}}</h4>
+            <p>{{el.text}}</p>
+        </div>
+</div>
+
+{% endfor %}
+</div>
+
 {% endblock %}
