requirements.txt changed

--- a/myblog/templates/feedback.html
+++ b/myblog/templates/feedback.html
@@ -7,7 +7,7 @@
   <img src="{%static 'arr.png'%}" id="arr">
 </div>
 <div class="row">
-{% for el in feed %}
+{% for el in feedback %}
 <div class="card color2">
         <div class="feed">
             <h2>{{el.name}}</h2>
