--- a/myblog/templates/posts.html
+++ b/myblog/templates/posts.html
@@ -6,10 +6,9 @@
   <h2>{{title}} </h2>
   <img src="{%static 'arr.png'%}" id="arr">
 </div>
-
 <div class="row">
   <div class="leftcolumn">
-      {% for el in posts %}
+      {% for el in new %}
     <button class="post" onclick="document.location='/post'">
         <div class="card">
           <h2>{{el.title}}</h2>
