--- a/myblog/templates/addfeed.html
+++ b/myblog/templates/addfeed.html
@@ -9,17 +9,17 @@
 
 <form action="{% url 'thanks'%}" method="POST">
     {% csrf_token %}
-    <select name="posts">
-        {% for p in posts %}
-        <option value="{{p.id}}"> {{p.title}} </option>
+    <select name="post">
+        {% for p in new %}
+            <option value="{{p.id}}">{{ p.title }}</option>
         {% endfor %}
     </select>
-    <lable for="name"> </lable>
-    <input name="name" id="name">
-    <lable for="email"> </lable>
+    <label for="user_name"></label>
+    <input name="user_name" id="user_name">
+    <label for="email"></label>
     <input name="email" id="email">
-    <lable for="feed"> </lable>
-    <input name="feed" id="feed">
+    <label for="comment"></label>
+    <input name="comment" id="comment">
     <button type="submit">Отправить</button>
 </form>
 
