--- a/myblog/templates/addfeed.html
+++ b/myblog/templates/addfeed.html
@@ -9,16 +9,17 @@
 
 <form action="{% url 'thanks'%}" method="POST">
     {% csrf_token %}
+    Пост
     <select name="post">
         {% for p in new %}
             <option value="{{p.id}}">{{ p.title }}</option>
         {% endfor %}
     </select>
-    <label for="user_name"></label>
+    <label for="user_name">Имя</label>
     <input name="user_name" id="user_name">
-    <label for="email"></label>
+    <label for="email">Почта</label>
     <input name="email" id="email">
-    <label for="comment"></label>
+    <label for="comment">Комментарий</label>
     <input name="comment" id="comment">
     <button type="submit">Отправить</button>
 </form>
