--- a/myblog/templates/post.html
+++ b/myblog/templates/post.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block  content %}
 <div class="title">
-  <h2>ТИПОГРАФИКА </h2>
+  <h2>{{title}} </h2>
   <img src="{%static 'arr.png'%}" id="arr">
 </div>
 <div class="row">
