--- a/myblog/templates/addfeed.html
+++ b/myblog/templates/addfeed.html
@@ -7,20 +7,20 @@
   <img src="{%static 'arr.png'%}" id="arr">
 </div>
 
-<form action="{% url 'thanks'%}" method="POST">
+<form action="{% url 'thanks'%}" method="POST" class="form">
     {% csrf_token %}
     Пост
     <select name="post">
         {% for p in new %}
             <option value="{{p.id}}">{{ p.title }}</option>
         {% endfor %}
-    </select>
+    </select ><br>
     <label for="user_name">Имя</label>
-    <input name="user_name" id="user_name">
+    <input name="user_name" id="user_name"><br>
     <label for="email">Почта</label>
-    <input name="email" id="email">
+    <input name="email" id="email"><br>
     <label for="comment">Комментарий</label>
-    <input name="comment" id="comment">
+    <input name="comment" id="comment"><br>
     <button type="submit">Отправить</button>
 </form>
 
