--- a/myblog/templates/post.html
+++ b/myblog/templates/post.html
@@ -1,10 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block  content %}
-<div class="title">
-  <h2>{{title}} </h2>
-  <img src="{%static 'arr.png'%}" id="arr">
-</div>
 <div class="row">
   <div class="leftcolumn">
       <h2>МИНИМАЛИЗМ</h2>
@@ -15,25 +11,11 @@
   <div class="rightcolumn">
     <div class="card color2">
       <h2>Описание</h2>
-      <ul>
-        <li>ВК: <a href="mailto:chertaas@yandex.ru">chertaas@yandex.ru</a></li>
-        <li>Тг-канал: <a href="https://t.me/chrtaa">@chrtaa</a></li>
-        <li>Behance: <a href="mailto:chertaas@yandex.ru">chertaas@yandex.ru</a></li>
-        <li>Artstation: <a href="mailto:chertaas@yandex.ru">chertaas@yandex.ru</a></li>
-      </ul>
+      Шаблон поста не получилось подгружать по клику на пост. Поэтому просто шаблон
     </div>
     <div class="card color1">
       <h2>Теги</h2>
-      <h4>Группа: 1-МГЗ-2</h4>
-      <p>Сделанный на скорую руку, блог про цифровые технологии в дизайне. Немного странный. Отнеситесь с пониманием)</p>
-    </div>
-
-    <div class="card color1">
-      <h2>Термины</h2>
-      <ul>
-        <li>Телеграм: <a href="https://t.me/chrtaa">@chrtaa</a></li>
-        <li>Почта: <a href="mailto:chertaas@yandex.ru">chertaas@yandex.ru</a></li>
-      </ul>
+      #teg  #teg #teg #teg
     </div>
   </div>
 </div>
