--- a/myblog/templates/post.html
+++ b/myblog/templates/post.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block  content %}
-<div class="row">
+<div class="row postt">
   <div class="leftcolumn">
       <h2>МИНИМАЛИЗМ</h2>
       <h4>Как чистый дизайн улучшает пользовательский опыт / 15 декабря 2024 </h4>
