--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -6,6 +6,7 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="{%static 'css/base.css'%}">
     <link rel="stylesheet" href="{%static 'css/index.css'%}">
+    <link rel="stylesheet" href="{%static 'css/form.css'%}">
 </head>
 <body>
 
